--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-order-pipe": "^2.2.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
